<?xml version="1.0"?>
<package format="2">
  <name>haptics_controller</name>
  <version>0.0.0</version>
  <description>The haptics_controller package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyuo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtmbuild2</depend>
  <depend>cpp_filters</depend>
  <depend>choreonoid</depend>
  <depend>joint_limit_table</depend>
</package>
