<?xml version="1.0"?>
<package format="2">
  <name>haptics_controller_choreonoid_sample</name>
  <version>0.0.0</version>
  <description>The haptics_controller_choreonoid_sample package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>haptics_controller</depend>
  <depend>hrpsys_choreonoid_tutorials</depend>
</package>
